--- a/html/portada.html
+++ b/html/portada.html
@@ -12,9 +12,9 @@
     <header>
         <div class="contenedor">
             <nav class="menu">
-                    <a href="#">Acerca de</a>
-                    <a href="#">Trabajos</a>
-                    <a href="#">Contacto</a>
+                    <a href="#id-acerca-de">Acerca de</a>
+                    <a href="#id-trabajos">Trabajos</a>
+                    <a href="#id-contacto">Contacto</a>
             </nav>
             <div class="contenedor-texto">
                 <div class="texto">
@@ -26,12 +26,12 @@
     </header>
     <section class="main">
         <section class="acerca">
-            <div class="contenedor">
+            <div class="contenedor" id="id-acerca-de">
                 <div class="foto">
                     <img src="../imagenes/linkedin.jpg" height="200"  alt="error al cargar la pagina" title="foto de perfil">
                 </div>
                 <div class="texto">
-                    <h3>Acerca de</h3>
+                    <h3 >Acerca de</h3>
                     <p>A lo largo del <span class="bold">Grado en Química</span> en la Universidad Autónoma de Madrid, he podido trabajar 
                         con diferentes aplicaciones informáticas y con algunos lenguajes de programación, experiencia que me hizo 
                         comprender que la rama de la tecnología de la información 
@@ -43,8 +43,8 @@
                 </div>
             </div>
         </section>
-        <section class="trabajos">
-            <div class="contenedor">
+        <section class="trabajos" id="id-trabajos">
+            <div class="contenedor" >
                 <h3>Trabajos</h3>
                 <div class="contenedor-trabajos">
                     <div class="trabajo">
@@ -125,7 +125,7 @@
     </section>
     <footer>
         <section class="contacto">
-            <div class="contenedor">
+            <div class="contenedor" id="id-contacto">
                 <h3>Contacto</h3>
                 <form class="formulario" action="" method="">
                     <!-- <label for="nombre">Nombre</label> -->
