--- a/html/portada.html
+++ b/html/portada.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="texto">
                     <h3 >Acerca de</h3>
-                    <p>A lo largo del <span class="bold">Grado en Química</span> en la Universidad Autónoma de Madrid, he podido trabajar 
+                    <p>A lo largo del <span class="bold">Grado en Química</span> en la Universidad Autónoma de Madrid, pude trabajar 
                         con diferentes aplicaciones informáticas y con algunos lenguajes de programación, experiencia que me hizo 
                         comprender que la rama de la tecnología de la información 
                         es el lugar donde quiero desarrollarme profesionalmente.
@@ -49,7 +49,7 @@
                 <div class="contenedor-trabajos">
                     <div class="trabajo">
                         <div class="thumb">
-                            <img src="../imagenes/page-ConvertImage.jpg" alt="páginas web" title="página web">
+                            <a href="https://ishtar5.github.io/html/webpage.html"><img src="../imagenes/page-ConvertImage.jpg" alt="páginas web" title="página web"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Página web</p>
@@ -144,7 +144,7 @@
                 <a href="#" class="facebook "><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="youtube "><i class="fab fa-youtube"></i></a>
                 <a href="#" class="github "><i class="fab fa-github"></i></a>
-                <a href="#" class="linkedin "><i class="fab fa-linkedin-in"></i></i></a>
+                <a href="https://www.linkedin.com/in/esther-morales-feito/" class="linkedin "><i class="fab fa-linkedin-in"></i></i></a>
                 <a href="#" class="instagram "><i class="fab fa-instagram"></i></a>
             </div>
         </section>
