enlaces entre 2 paginas

--- a/html/webpage.html
+++ b/html/webpage.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/webpage.css">
+    <script src="https://kit.fontawesome.com/c514a74d49.js" crossorigin="anonymous"></script>
     <title>Página web</title>
 </head>
 <body>
     <header>
         <nav class="menu">
             <a href="https://ishtar5.github.io/html/portada.html">Inicio</a>
-            <a href="#">Acerca de</a>
-            <a href="#">Trabajos</a>
-            <a href="#">Contacto</a>
+            <a href="https://ishtar5.github.io/html/portada.html#id-acerca-de">Acerca de</a>
+            <a href="https://ishtar5.github.io/html/portada.html#id-trabajos">Trabajos</a>
+            <a href="https://ishtar5.github.io/html/portada.html#id-contacto">Contacto</a>
         </nav>
     </header>
     <section>
@@ -74,8 +75,33 @@
             </div>
         </div>
     </section>
-    <aside></aside>
-    <footer></footer>
+    <aside>
+        <div class="contenedor">
+            <div class="trabajos-destacados">
+                <h3 class="titulo-sidebar">Trabajos destacados</h3>
+                <ul>
+                    <li><a href="#">Formulario</a></li>
+                    <li><a href="#">Tabla</a></li>
+                    <li><a href="#">Galería</a></li>
+                </ul>
+            </div>
+            <div class="tecnologias-destacados">
+                <h3 class="titulo-sidebar">Tecnologías destacadas</h3>
+                <p>Java - Java EE - JavaScript - Angular JS - Angular - Python - HTML5 - CSS3  </p>
+            </div>
+        </div>
+    </aside>
+    <footer>
+        <div class="redes-sociales">
+            <a href="#" class="twitter "><i class="fab fa-twitter"></i></a>
+            <a href="#" class="facebook "><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="youtube "><i class="fab fa-youtube"></i></a>
+            <a href="#" class="github "><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/esther-morales-feito/" class="linkedin "><i class="fab fa-linkedin-in"></i></i></a>
+            <a href="#" class="instagram "><i class="fab fa-instagram"></i></a>
+        </div>
+        <p>Autora: Esther Morales Feito</p>
+    </footer>
     
 </body>
 </html>
