subida con galeria y formulario

--- a/html/portada.html
+++ b/html/portada.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <img src="../imagenes/form-ConvertImage.png" alt="Formulario" title="Formulario">
+                            <a href="https://ishtar5.github.io/html/formulario.html"><img src="../imagenes/form-ConvertImage.png" alt="Formulario" title="Formulario"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Formulario</p>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <img src="../imagenes/cam2-ConvertImage.png" alt="Galería" title="Galería">
+                            <a href=https://ishtar5.github.io/html/fotos.html"><img src="../imagenes/cam2-ConvertImage.png" alt="Galería" title="Galería"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Galería</p>
