--- a/html/webpage.html
+++ b/html/webpage.html
@@ -35,7 +35,17 @@
                     en los 'services', la comunicación con la base de datos se realiza con los 'repositories o DAO' y por último tenemos un controlador 
                     que se comunica con las vistas.
                 </p>
-                <p> </p>
+                <p>
+                    Asimismo, durante este curso he trabajado con Hibernate (ORM) framwork que permite mapear las tablas de la base de datos en Entidades. También he realizado prácticas con Spring Data JPA (Java Persistence API) que facilita un módulo para el acceso a las bases de datos. Las bases de datos con las que he trabajado han sido MySQL, SQL y MongoDB. Para las dos primeras he implementado la interfaz de JpaRepository y para MongoDB existe una similar, MongoRepository.
+                </p>
+                <p>
+                    En la capa de la Vista he trabajdo con JSP (Java Server Pages) que permite incrustar código Java detro del html. También he realizado algunas páginas con la ayuda de JSTL (Java Standard Tag Library).
+
+                    Actualmente hay un nuevo motor de plantillas Java del lado servidor para entornos web que se conoce como Thymeleaf. 
+                </p>
+                <p>
+                    He podido conocer y realizar numerosas prácticas utilizando la arquitectura de microservicios, es decir, construir una aplicación como un conjunto de pequeños servicios que funcionan de forma autónoma y comunicandose a través del protocolo HTTP. Para realizar la comunicación entre los microservicios he utilizado la clase RestTemplate. Esto lo he realizado con Spring clásico con su configuración de XML o clase Java de configuración y también lo he realizado microservicios con Spring Boot. Finalizando el curso puede realizar una breve introducción con Docker, donde pudimos crear imagenes de nuestras aplicaciones y luego instanciarla en forma de contenedor.
+                </p>
             </div>
             <div class="curso">
                 <h3 class="subtitulos">Python</h3>
@@ -80,9 +90,9 @@
             <div class="trabajos-destacados">
                 <h3 class="titulo-sidebar">Trabajos destacados</h3>
                 <ul>
-                    <li><a href="#">Formulario</a></li>
+                    <li><a href="https://ishtar5.github.io/html/formulario.html">Formulario</a></li>
                     <li><a href="#">Tabla</a></li>
-                    <li><a href="#">Galería</a></li>
+                    <li><a href="https://ishtar5.github.io/html/fotos.html">Galería</a></li>
                 </ul>
             </div>
             <div class="tecnologias-destacados">
