error en href Galeria

--- a/html/portada.html
+++ b/html/portada.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href=https://ishtar5.github.io/html/fotos.html"><img src="../imagenes/cam2-ConvertImage.png" alt="Galería" title="Galería"></a>
+                            <a href="https://ishtar5.github.io/html/fotos.html"><img src="../imagenes/cam2-ConvertImage.png" alt="Galería" title="Galería"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Galería</p>
