do responsive webpage.html

--- a/html/webpage.html
+++ b/html/webpage.html
@@ -19,7 +19,7 @@
     </header>
     <section>
         <div class="imagen">
-            <img src="../imagenes/webpage.jpg" alt="ordenador" title="ordenador" width="700">
+            <img src="../imagenes/webpage.jpg" alt="ordenador" title="ordenador">
         </div>
         <div class=texto>
             <h2 class=titulo>Cursos realizados</h2>
