fix responsive of webpage.html

--- a/html/portada.html
+++ b/html/portada.html
@@ -83,7 +83,7 @@
                             <p class="categoria">HTML5-CSS3</p>
                         </div>
                     </div>
-                    <div class="trabajo">
+                    <!-- <div class="trabajo">
                         <div class="thumb">
                             <img src="../imagenes/azul.jpg" alt="error al cargar la pagina" title="foto de perfil">
                         </div>
@@ -118,7 +118,7 @@
                             <p class="nombre">lorem</p>
                             <p class="categoria">categoria</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
