--- a/html/webpage.html
+++ b/html/webpage.html
@@ -70,7 +70,7 @@
                     <li>Inglés Técnico</li>
                 </ul>
                 <p>
-                    Mientras que las de segundo han sido:
+                    Mientras que en el curso que viene realizaré las siguientes asignaturas:
                 </p>
                 <ul class="lista">
                     <li>Desarrollo web en entorno cliente</li>
